--- a/src/app/_components/upload/upload.component.scss
+++ b/src/app/_components/upload/upload.component.scss
@@ -4,3 +4,15 @@
   flex-direction: row;
   align-items: center;
 }
+
+.spinner-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
